@@ -1,3 +1,7 @@
+2011-09-23  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Replace daemon() function with fork().  Patch by Anatol Pomozov
+
 2011-08-26  Miklos Szeredi <miklos@szeredi.hu>
 
 	* If configured with --disable-mtab then don't call mount(8) from
